mojs added - seem i've be prepared

--- a/src/app.pug
+++ b/src/app.pug
@@ -1,6 +1,16 @@
 app
+  navbar
   h3.animated.bounce.duration-2s hello world
   style(type="stylus").
     h3
       color #f23344
       font-size 200%
+
+  script.
+    import navbar from '@/components/navbar'
+
+    export default {
+      components: {
+        navbar
+      }
+    }
