--- a/src/components/navbar.pug
+++ b/src/components/navbar.pug
@@ -2,7 +2,8 @@ navbar
   nav#navb.navbar(role="navigation" aria-label="main navigation")
     .navbar-brand
       .navbar-item(href="https://bulma.io")
-        img(src="https://bulma.io/images/bulma-logo.png" width="112" height="28")
+        //- img(src="https://bulma.io/images/bulma-logo.png" width="112" height="28")
+        svgicon(icon="flies" width="100%")
   ul
     li
       a(href="t1") T1
@@ -14,7 +15,10 @@ navbar
       a(href="t4") T4
 
   script.
+    import svgicon from './svgicon.pug'
+
     export default {
+      components: { svgicon },
       onMounted() {
         new mojs.Shape({
           parent:       '#navb',
@@ -31,6 +35,8 @@ navbar
     }
 
   style(type="stylus").
+    .navbar-brand
+      height 64px
     ul
       list-style-type none
       margin 0
