--- a/src/style/global.styl
+++ b/src/style/global.styl
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,700|Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Dancing+Script:400,700&display=swap');
 
+html
 body
-  background rgba(20, 20, 20, 1)
-  font-family 'Roboto', sans-serif
+  height 100%
+
+
+body
+  display -webkit-box
+  display -ms-flexbox
+  display flex
+  -webkit-box-pack center
+  -ms-flex-pack center
+  justify-content center
+  -webkit-box-align center
+  -ms-flex-align center
+  align-items center
+
+  background-color #2c3138
+  -webkit-perspective 90rem
+  perspective 90rem
+  -webkit-perspective-origin 34% 61%
+  perspective-origin 34% 61%
+
+img
+  width 160px
