--- a/src/pages/home-page.pug
+++ b/src/pages/home-page.pug
@@ -2,13 +2,23 @@ home-page
   c-container
     c-box#b1(
       img="https://s3-us-west-2.amazonaws.com/s.cdpn.io/945546/3433202-893bc9989a52eba0.png"
-      color="#00bf9c"
+      btn-color="#00bf9c"
       btn-text="Sensebot"
     )
     c-box#b2(
-      img="https://cdn.dribbble.com/assets/logo-footer-hd-a05db77841b4b27c0bf23ec1378e97c988190dfe7d26e32e1faea7269f9e001b.png"
-      color="#653EE6"
+      img="https://s3-us-west-2.amazonaws.com/s.cdpn.io/945546/3433202-964edcf0f07211b0.png"
+      btn-color="#653EE6"
       btn-text="OnePass"
+    )
+    c-box#b3(
+      img="https://s3-us-west-2.amazonaws.com/s.cdpn.io/945546/3433202-2ebb2b6f93add843.png"
+      btn-color="#008BFF"
+      btn-text="DeepKnow"
+    )
+    c-box#b4(
+      img="https://s3-us-west-2.amazonaws.com/s.cdpn.io/945546/3433202-f79c4cc8de2f84ae.png"
+      btn-color="#FF6500"
+      btn-text="Scanner"
     )
   script.
     import cContainer from '../components/c-container.pug'
