--- a/src/style/global.styl
+++ b/src/style/global.styl
@@ -14,7 +14,7 @@ body
   justify-content center
   -webkit-box-align center
   -ms-flex-align center
-  align-items center
+  align-items start
 
   background-color #2c3138
   -webkit-perspective 90rem
